update selenium version

--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -10,16 +10,18 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <playwright.version>1.52.0</playwright.version>
+        <playwright.version>1.56.0</playwright.version>
         <testng.version>7.11.0</testng.version>
-        <logback-classic.version>1.5.6</logback-classic.version>
-        <allure-testng.version>2.27.0</allure-testng.version>
+        <logback-classic.version>1.5.20</logback-classic.version>
+        <allure-testng.version>2.30.0</allure-testng.version>
         <owner.version>1.0.12</owner.version>
 
-        <aspectj.version>1.9.21</aspectj.version>
+        <aspectj.version>1.9.24</aspectj.version>
         <assertj-core.version>3.26.0</assertj-core.version>
+        <javafaker.version>1.0.2</javafaker.version>
+        <rest-assured.version>5.5.6</rest-assured.version>
 
-        <allure-maven.version>2.12.0</allure-maven.version>
+        <allure-maven.version>2.16.1</allure-maven.version>
         <maven-compiler-plugin.version>3.12.1</maven-compiler-plugin.version>
 
         <playwrightBrowser>chrome</playwrightBrowser>
@@ -67,6 +69,16 @@
             <artifactId>aspectjweaver</artifactId>
             <version>${aspectj.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>${javafaker.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>${rest-assured.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -106,8 +118,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven-compiler-plugin.version}</version>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
+                    <source>16</source>
+                    <target>16</target>
                 </configuration>
             </plugin>
             <plugin>
