--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>io.testsmith</groupId>
     <artifactId>playwright-testng-archetype</artifactId>
-    <version>0.7</version>
+    <version>0.8-SNAPSHOT</version>
     <packaging>maven-archetype</packaging>
 
     <name>Playwright TestNG Archetype</name>
@@ -42,7 +42,7 @@
         <connection>scm:git:git@github.com:testsmith-io/playwright-testng-archetype.git</connection>
         <developerConnection>scm:git:git@github.com:testsmith-io/playwright-testng-archetype.git</developerConnection>
         <url>https://github.com/testsmith-io/playwright-testng-archetype</url>
-      <tag>v0.7</tag>
+      <tag>playwright-testng-archetype-0.7</tag>
   </scm>
 
     <developers>
